--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -13,7 +13,6 @@ jobs:
           - macos-13
           - macos-12
           - macos-11
-          - macos-10.15
           - ubuntu-22.04
           - ubuntu-20.04
         sh:
@@ -30,15 +29,21 @@ jobs:
           - { os: macos-13, sh: bb }
           - { os: macos-12, sh: bb }
           - { os: macos-11, sh: bb }
-          - { os: macos-10.15, sh: bb }
-        include:
+          # HomeBrew's yash does not work with ShellSpec for some reason
+          - { os: macos-13, sh: yash }
+          - { os: macos-12, sh: yash }
+          - { os: macos-11, sh: yash }
+        #include:
+        # NOTE: mrsh and posh are temporarily disabled because they don't work
+        #       with ShellSpec.
+         #
           # mrsh: since we're building from source, testing different
           #       Ubuntu versions doesn't make sense.
           #       Also, Ubuntu only, because mrsh does not build on macOS.
-          - { os: ubuntu-22.04, sh: mrsh }  # https://mrsh.sh
+          #- { os: ubuntu-22.04, sh: mrsh }  # https://mrsh.sh
           # Policy-compliant Ordinary SHell
-          - { os: ubuntu-20.04, sh: posh }
-          - { os: ubuntu-22.04, sh: posh }
+          #- { os: ubuntu-20.04, sh: posh }
+          #- { os: ubuntu-22.04, sh: posh }
     runs-on: ${{ matrix.os }}
     steps:
       - name: Check out repository code
@@ -99,6 +104,8 @@ jobs:
               esac ;;
             (ksh|mksh)
               "${SHELL}" -c 'echo $0: ${KSH_VERSION}' ;;
+            (yash)
+              "${SHELL}" --version ;;
             (*)
               case ${MATRIX_OS%%-*}
               in
@@ -112,6 +119,13 @@ jobs:
 
           printf '\nbats:\n'
           test/bats/bin/bats -v
-      - name: Run unit tests
+
+          printf '\nShellSpec:\n'
+          spec/.shellspec/bin/shellspec --version
+      - name: Run unit tests (bats)
         run: |
           make test
+      - name: Run unit tests (ShellSpec)
+        if: always()
+        run: |
+          make SPEC_SHELL="${SHELL}" spec
