--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -10,6 +10,7 @@ jobs:
       fail-fast: false
       matrix:
         os:
+          - macos-14
           - macos-13
           - macos-12
           - macos-11
@@ -27,10 +28,12 @@ jobs:
           - zsh
         exclude:
           # BusyBox not easily installable on macOS
+          - { os: macos-14, sh: bb }
           - { os: macos-13, sh: bb }
           - { os: macos-12, sh: bb }
           - { os: macos-11, sh: bb }
           # HomeBrew's yash does not work with ShellSpec for some reason
+          - { os: macos-14, sh: yash }
           - { os: macos-13, sh: yash }
           - { os: macos-12, sh: yash }
           - { os: macos-11, sh: yash }
@@ -38,7 +41,8 @@ jobs:
           # gwsh: since we're building from source, testing different
           #       OS versions doesn't make sense.
           - { os: ubuntu-22.04, sh: gwsh }
-          - { os: macos-13, sh: gwsh }
+          - { os: macos-14, sh: gwsh }  # arm
+          - { os: macos-13, sh: gwsh }  # x86
         # NOTE: mrsh and posh are temporarily disabled because they don't work
         #       with ShellSpec.
          #
@@ -52,7 +56,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - name: Check out repository code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
           submodules: true
